Add media querys to solver
This commit adds media querys to the solver page so that the layout is
adjusted (as best as possible) for different screen sizes and
orientations. Note, the ideal screen is that of a computer but a
handheld device such as a phone or ipad will also suffice.

--- a/svelte-app/src/app.css
+++ b/svelte-app/src/app.css
@@ -61,6 +61,12 @@ p {
 	line-height: 1.5;
 }
 
+label {
+	font-weight: 400;
+	color: var(--heading-color);
+	line-height: 1.5;
+}
+
 a {
 	color: var(--accent-color);
 	text-decoration: none;
