--- a/svelte-app/src/app.css
+++ b/svelte-app/src/app.css
@@ -32,7 +32,7 @@ body::before {
 	content: '';
 	width: 80vw;
 	height: 100vh;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 10vw;
 	z-index: -1;
