Implements 2nd and 3rd round of feedback
This commit implements feedback given on the 2nd and 3rd round. This
includes: adding animation to reflection symmetry figure, spell checks,
re-wording sections of the about page, updating the tree diagram to
include images of the puzzle pieces, removing unused corner links,
updating footer, updating header, resizing the animations based on
screen size (by adding viewport and width sizes).

--- a/svelte-app/src/app.css
+++ b/svelte-app/src/app.css
@@ -8,7 +8,7 @@
 	--primary-color: #19232D;
 	--secondary-color: #19232D;
 	--tertiary-color: #19232D;
-	--accent-color: #748067;
+	--accent-color: #a6b498;
 	--heading-color: white;
 	--text-color: white;
 	--background-without-opacity: rgba(255, 255, 255, 0.7);
